--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
     "react": "^18",
