--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "git-commit-msg-linter": "^5.0.8",
     "lucide-react": "^0.408.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.4.0",
