--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,5 +2,14 @@
   "trailComma": "none",
   "semi": false,
   "singleQuote": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 80
+      }
+    }
+  ]
 }
