--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -2,14 +2,7 @@
   "trailComma": "none",
   "semi": false,
   "singleQuote": true,
-  "plugins": ["prettier-plugin-tailwindcss"],
-  "endOfLine": "auto",
-  "overrides": [
-    {
-      "files": "*.json",
-      "options": {
-        "printWidth": 80
-      }
-    }
+  "plugins": [
+    "prettier-plugin-tailwindcss"
   ]
 }
