--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,5 +4,14 @@
   "singleQuote": true,
   "plugins": [
     "prettier-plugin-tailwindcss"
+  ],
+  "endOfLine": "auto",
+  "overrides": [
+    {
+      "files": "*.json",
+      "options": {
+        "printWidth": 80
+      }
+    }
   ]
 }
