:bug: prisma generate

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky"
+    "prepare": "husky install",
+    "postinstall": "npx prisma generate"
+    
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
