--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "next lint",
     "prepare": "husky install",
     "postinstall": "npx prisma generate"
-    
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.1",
@@ -26,6 +25,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.1.7",
     "embla-carousel-react": "^8.1.7",
+    "firebase": "^10.12.4",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
     "next-auth": "^4.24.7",
@@ -34,6 +34,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
+    "react-quill": "^2.0.0",
     "resend": "^3.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
