--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,7 @@
 {
   "env": {
     "browser": true,
-    "es2021":true 
+    "es2021": true
   },
-  "extends": [
-    "next/core-web-vitals"
-  ]
- 
+  "extends": ["next/core-web-vitals"]
 }
