--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
-  "env": {
-    "browser": true,
-    "es2021": true
-  },
-  "extends": ["next/core-web-vitals"]
+  "extends": [
+    "next/core-web-vitals"
+  ]
 }
